# text-extraction-pipeline

./: .gitignore  CLAUDE.md  README.md  chunking.py  merging.py  presets.json  pyproject.toml  requirements.txt  streamlit_app.py  utils.py  validation.py
.github/workflows/: ci.yml
data/: icd10_cm_2026.json
docs/superpowers/plans/: 2026-03-13-three-features.md  2026-03-14-approach-a.md
docs/superpowers/specs/: 2026-03-13-three-features-design.md  2026-03-14-approach-a-design.md  2026-03-15-batch-vision-support-design.md
scripts/: generate_icd10_data.py
tests/: conftest.py  test_chunking.py  test_e2e.py  test_merging.py  test_streamlit_app.py  test_utils.py  test_validation.py
tests/data/csv/: sample_10k_sentences.csv  sample_persons.csv
