[project]
name = "nuextract-pipeline"
version = "0.6.0"
description = "Structured extraction pipeline using NuExtract-1.5-MLX with Streamlit UI"
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.20.0",
    "pandas==2.3.3",
    "pyyaml==6.0.2",
    "python-dotenv==1.1.0",
    "streamlit==1.54.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.16",
]

[tool.ruff.lint.per-file-ignores]
"streamlit_app.py" = ["E402"]
