[project]
name = "nuextract-pipeline"
version = "0.8.0"
description = "Clinical structured extraction pipeline using NuExtract-1.5-MLX with chunking, ICD-10 validation, and Streamlit UI"
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.20.0",
    "pyyaml==6.0.2",
    "streamlit==1.54.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.16",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that load the real model (slow, opt-in via -m e2e)",
]
addopts = "-m 'not e2e'"
